# BacktestingEngine

./: .gitignore  CMakeLists.txt  README.md
data/: daily_AAPL.csv  test.csv
include/: market_data.h  portfolio.h  position.h  rsi_strategy.h  signal.h  sma_crossover_strategy.h  strategy.h  trade.h
src/core/: main.cpp
src/data/: market_data.cpp
src/portfolio/: portfolio.cpp  position.cpp  trade.cpp
src/strategies/: rsi_strategy.cpp  sma_crossover_strategy.cpp
tests/: CMakeLists.txt
